* Mark non-autoconfirmed users in RC * Avoid overselecting fields in RC and add $fields to SpecialRecentChangesQuery * Some whitespace tweaks in RecentChange.php. Remove dead code. * Avoid rc_new check in ChangesList * Move some "unpatrolled" CSS to shared.css. Add 'newuser' CSS. * Bump style version

--- a/skins/common/shared.css
+++ b/skins/common/shared.css
@@ -56,7 +56,19 @@ table.filehistory td.filehistory-selected {
 }
 
 /*
- * rev_deleted stuff
+ * Recent changes
+ */
+span.unpatrolled {
+	font-weight: bold;
+	color: red;
+}
+span.newuser {
+	font-weight:bold;
+	color:orange;
+}
+
+/*
+ * RevisionDelete stuff
  */
 li span.deleted, span.history-deleted {
 	text-decoration: line-through;
