--- a/skins/modern/main.css
+++ b/skins/modern/main.css
@@ -650,10 +650,6 @@ div.patrollink {
 span.newpage, span.minor, span.searchmatch, span.bot {
 	font-weight: bold;
 }
-span.unpatrolled {
-	font-weight: bold;
-	color: red;
-}
 
 span.searchmatch {
 	color: red;
